2008-09-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage -logoffAction]):
	log the username performing the logoff operation.

	* UI/MainUI/SOGoRootPage.m ([SOGoRootPage -connectAction]): log
	success information about current attempt.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-lookupName:lookupNameinContext:localContextacquire:acquire]): do
	not use the object returned by "bindToObject:inContext:".
	Otherwise the clientObject isn't set in the context.

2008-09-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartAlternativeViewer.m
	([UIxMailPartAlternativeViewer -selectChildInfo]): give precedence
	on multipart/mixed parts over text/* parts.

	* SoObjects/Mailer/SOGoDraftObject.m ([SOGoDraftObject
	-isValidAttachmentName:filename]): accept all filenames except
	".", ".." and those that contain "/". Any other is valid and will
	be accepted.

2008-09-08  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m ([LDAPSource
	-checkLogin:loginToCheckandPassword:passwordToCheck])	
	([LDAPSource -allEntryIDs])	
	([LDAPSource -fetchContactsMatching:match])
	([LDAPSource -lookupContactEntry:entryID])
	([LDAPSource -lookupContactEntryWithUIDorEmail:uid]): catch any
	LDAP connection failure exception and return an empty result if
	such as situation has happened.

2008-09-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailReply.m: made class a child of
	SOGoMailForward, since we need to access more or less the same
	fields from the original message, especially in outlook reply mode.
	([SOGoMailReply -setOutlookMode:newOutlookMode]): new accessor
	defining in which mode we are.

	* SoObjects/Mailer/SOGoMailObject+Draft.m ([SOGoMailObject
	-contentForReply]): if the reply style is outlook, then we use the
	content generated for inline forwarding.
	([SOGoMailObject -useOutlookStyleReplies]): new method that